Correction border-bottom nav en version mobile

--- a/styles.css
+++ b/styles.css
@@ -585,13 +585,13 @@ figcaption span {
         order: 3;
         width: 100%;
         padding: 5px;
-        border-bottom: 2px solid #F2F2F2;
         text-align: center;
         display: flex;
         justify-content: space-around;
     }
     .header-nav a {
-        padding: 0 40px 10px 40px;
+        padding: 0 55px 15px 55px;
+        border-bottom: 2px solid #F2F2F2;
     }
     
     .header-nav a:hover {
